# computations

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  env.sample  env.staging  pyproject.toml
computations/: configuration.py  models.py  persistence.py  services.py  worker.py
computations/http/: api_v1.py  validation.py
computations/http/schemas/: __init__.py  get_v1_computations_id_response.json  get_v1_tasks_id_response.json  post_v1_computations_request.json  v1_Computation.json  v1_Task.json
dockerfiles/postgres/: Dockerfile  init-user-db.sql
migrations/: env.py
migrations/versions/: 5d66444c4149_add_computations_tasks_table.py
tests/: conftest.py  test_configuration.py  test_dummy.py  test_models.py  test_persistence.py  test_services.py  test_worker.py
tests/http/: test_api_v1.py  test_validation.py
